[package]
name = "near-lake-raw-printer"
version = "0.1.0"
edition = "2021"
rust-version = "1.58.1"

[dependencies]
futures = "0.3.5"
itertools = "0.9.0"
tokio = { version = "1.1", features = ["sync", "time", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1" }
tracing = "0.1.13"
tracing-subscriber = "0.2.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.55"

near-lake-framework = { git = "https://github.com/near/near-lake-framework", rev = "e27eecbb20fd26b2efeaa21ebb998db47521a73e" }

