[package]
name = "near-lake-raw-printer"
version = "0.1.0"
edition = "2021"
rust-version = "1.58.1"

[dependencies]
futures = "0.3.5"
itertools = "0.9.0"
tokio = { version = "1.1", features = ["sync", "time", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1" }
tracing = "0.1.13"
tracing-subscriber = "0.2.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.55"

near-lake-framework = { git = "https://github.com/near/near-lake-framework", rev = "b14d37f71c5fcfe184d3084b1fe2d14b8f50780f" }
